# SpaceByte

./: README.md
CL/: beginner.ipynb
CPP/: EigenExample.cpp  KeyWordExample.cpp
CXX/: CMakeLists.txt  README.md
EVO_blog/: EVO使用总结.docx  picture.pptx
EVO_blog/Data/: loop_result.csv  result.csv
Figure/MATLAB/: AreaPlots.m  DualYaxisLine.m  ShadedErrorPlots.m  ZoomedInPlots.m  spiderweb.m
NeuralNetwork/NeuralNetwork/.ipynb_checkpoints/: nn-from-scratch-checkpoint.ipynb
NeuralNetwork/RL/: SAC.py
NumericalOptimization/: CMakeLists.txt  main.cpp  steepestGD.h
PCL/: README.md
PCL/1/passthrough/: CMakeLists.txt  passthrough.cpp
PCL/2/voxel_grid/: voxel_grid.cpp
PCL/3/statistical_removal/: statistical_removal.cpp
ReinforcementLearning/.ipynb_checkpoints/: PyTorch_tensor_exercises_with_solutions-checkpoint.ipynb
ReinforcementLearning/DQN/: DQN.py  DQN_utils.py
ReinforcementLearning/PPO/: PPO.ipynb
ThirdParty(Python)/: FoliumTutur.ipynb  foliumLea.ipynb
ThirdParty(Python)/stable_baselines3_vlog/: train_mountaicar.py
ThirdParty(Python)_vlog/stable_baselines3_vlog/: train_carpole.py
TorchTutorial/: read_data.py  rename_dataset.py
TorchTutorial/dataset/: dataset.txt
paperAlgorithm/IRIS/: CMakeLists.txt  IRIS.cpp  IRIS.h  main.cpp
sl_vslam/ch4/L4/code/disparity/: CMakeLists.txt  disparity.cpp
ws_mbot/src/: README.md
ws_mbot/src/mbot_description/: package.xml
ws_mbot/src/mbot_description/config/: mbot_urdf.rviz  mbot_xacro.rviz
ws_mbot/src/mbot_description/launch/: display_mbot_xacro.launch
ws_mbot/src/mbot_description/urdf/: mbot_base.urdf  mbot_base.xacro
ws_mbot/src/mbot_gazebo/: CMakeLists.txt  package.xml
ws_mbot/src/mbot_gazebo/config/: mbot_gazebo.rviz
ws_mbot/src/mbot_gazebo/src/: mpc_node.cpp
ws_mbot/src/mpc_follower/: CMakeLists.txt  package.xml
ws_mbot/src/nav_demo/: package.xml
(+29 files in other folders)
